--- a/exosuite-users-api-nginx.template.yaml
+++ b/exosuite-users-api-nginx.template.yaml
@@ -18,6 +18,11 @@ kind: Deployment
 metadata:
   name: exosuite-users-api-nginx
 spec:
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       run: exosuite-users-api-nginx
@@ -29,7 +34,7 @@ spec:
     spec:
       containers:
         - name: exosuite-users-api-nginx
-          image: dev.exosuite.fr:5000/exosuite/exosuite-users-api-nginx
+          image: dev.exosuite.fr:5000/exosuite/exosuite-users-api-nginx:<VERSION>
           ports:
             - containerPort: 443
       imagePullSecrets:
