--- a/exosuite-users-api-php-fpm.template.yaml
+++ b/exosuite-users-api-php-fpm.template.yaml
@@ -18,6 +18,11 @@ kind: Deployment
 metadata:
   name: exosuite-users-api-php-fpm
 spec:
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       run: exosuite-users-api-php-fpm
@@ -29,7 +34,7 @@ spec:
     spec:
       containers:
         - name: exosuite-users-api-php-fpm
-          image: dev.exosuite.fr:5000/exosuite/exosuite-users-api-php-fpm
+          image: dev.exosuite.fr:5000/exosuite/exosuite-users-api-php-fpm:<VERSION>
           ports:
             - containerPort: 9000
       imagePullSecrets:
