--- a/redis/exosuite-redis-store.yaml
+++ b/redis/exosuite-redis-store.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: exosuite-redis-live
+  name: exosuite-redis-store
   labels:
-    app: exosuite-redis-live
+    app: exosuite-redis-store
 spec:
   type: ClusterIP
   ports:
@@ -11,28 +11,28 @@ spec:
       protocol: TCP
       port: 6379
   selector:
-    run: exosuite-redis-live
+    run: exosuite-redis-store
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: exosuite-redis-live
+  name: exosuite-redis-store
 spec:
   selector:
     matchLabels:
-      run: exosuite-redis-live
+      run: exosuite-redis-store
   replicas: 1
   template:
     metadata:
       labels:
-        run: exosuite-redis-live
+        run: exosuite-redis-store
     spec:
       volumes:
-        - name: redis-live-storage
+        - name: redis-store-storage
           persistentVolumeClaim:
-            claimName: redis-live-claim
+            claimName: exosuite-redis-store-claim
       containers:
-        - name: exosuite-redis-live
+        - name: exosuite-redis-store
           image: redis:alpine
           ports:
             - containerPort: 6379
@@ -40,31 +40,31 @@ spec:
           args: ["-c", "docker-entrypoint.sh --appendonly yes"]
           volumeMounts:
             - mountPath: "/data"
-              name: redis-live-storage
+              name: redis-store-storage
 ---
 kind: PersistentVolume
 apiVersion: v1
 metadata:
-  name: exosuite-redis-live-volume
+  name: exosuite-redis-store-volume
   labels:
     type: local
 spec:
   capacity:
     storage: 10Gi
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   storageClassName: manual
   hostPath:
-    path: "/var/www/exosuite-redis-live"
+    path: "/var/www/exosuite-redis-store"
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: exosuite-redis-live-claim
+  name: exosuite-redis-store-claim
 spec:
   resources:
     requests:
       storage: 10Gi
   storageClassName: manual
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
