--- a/templates/exosuite-nginx.template.yaml
+++ b/templates/exosuite-nginx.template.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: <ENV>
   name: <CONTAINER>
   labels:
     app: <CONTAINER>
@@ -16,6 +17,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: <ENV>
   name: <CONTAINER>
 spec:
   strategy:
