--- a/templates/exosuite-postgres.template.yaml
+++ b/templates/exosuite-postgres.template.yaml
@@ -21,11 +21,11 @@ metadata:
 spec:
   storageClassName: local-storage
   capacity:
-    storage: 5Gi
+    storage: 10Gi
   accessModes:
     - ReadWriteMany
   hostPath:
-    path: "/mnt/data"
+    path: "/mnt/data/<CONTAINER>"
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
