--- a/templates/exosuite-postgres.template.yaml
+++ b/templates/exosuite-postgres.template.yaml
@@ -87,7 +87,7 @@ metadata:
   labels:
     app: <CONTAINER>
 spec:
-  type: ClusterIP
+  clusterIP: None
   ports:
     - name: <CONTAINER>
       protocol: TCP
