--- a/templates/exosuite-redis.template.yaml
+++ b/templates/exosuite-redis.template.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: <CONTAINER>
 spec:
-  type: ClusterIP
+  clusterIP: None
   ports:
     - name: redis
       protocol: TCP
