add nginx Liveness and Readiness

--- a/templates/exosuite-nginx.template.yaml
+++ b/templates/exosuite-nginx.template.yaml
@@ -42,7 +42,7 @@ spec:
 
           livenessProbe:
             httpGet:
-              scheme: https
+              scheme: HTTPS
               path: /monitoring/alive
               port: 443
             initialDelaySeconds: 15
@@ -50,7 +50,7 @@ spec:
             periodSeconds: 15
           readinessProbe:
             httpGet:
-              scheme: https
+              scheme: HTTPS
               path: /monitoring/alive
               port: 443
             initialDelaySeconds: 5
