--- a/templates/exosuite-artisan.template.yaml
+++ b/templates/exosuite-artisan.template.yaml
@@ -25,12 +25,7 @@ spec:
             postStart:
               exec:
                 command: [
-                  "/bin/sh",
-                  "-c",
-                  "rm bootstrap/cache/*.php && php artisan optimize:clear \
-                  && php artisan package:discover && php artisan config:cache \
-                  && php artisan route:cache \
-                  && php artisan view:cache"
+                  "/usr/local/bin/init"
                 ]
       imagePullSecrets:
         - name: <REGISTRY_SECRET>
