--- a/templates/exosuite-php-fpm.template.yaml
+++ b/templates/exosuite-php-fpm.template.yaml
@@ -57,7 +57,7 @@ spec:
             postStart:
               exec:
                 command: [
-                  "sh /usr/local/bin/init <MIGRATE> <SCRIPT>"
+                  "/usr/local/bin/init <MIGRATE> <SCRIPT>"
                 ]
 
       imagePullSecrets:
