--- a/elasticsearch/production/elasticsearch.yaml
+++ b/elasticsearch/production/elasticsearch.yaml
@@ -101,36 +101,30 @@ spec:
           requests:
             storage: 50Gi
 ---
-kind: PersistentVolume
 apiVersion: v1
+kind: PersistentVolume
 metadata:
   namespace: production
   name: exosuite-elasticsearch-vol-0
-  labels:
-    type: local
-    app: exosuite-elasticsearch
 spec:
-  storageClassName: local-storage
   capacity:
-    storage: 500Gi
+    storage: 50Gi
   accessModes:
-    - ReadWriteMany
-  hostPath:
+  - ReadWriteOnce
+  storageClassName: local-storage
+  local:
     path: /mnt/data
 ---
-kind: PersistentVolume
 apiVersion: v1
+kind: PersistentVolume
 metadata:
   namespace: production
   name: exosuite-elasticsearch-vol-1
-  labels:
-    type: local
-    app: exosuite-elasticsearch
 spec:
-  storageClassName: local-storage
   capacity:
-    storage: 500Gi
+    storage: 50Gi
   accessModes:
-    - ReadWriteMany
-  hostPath:
+  - ReadWriteOnce
+  storageClassName: local-storage
+  local:
     path: /mnt/data
