--- a/templates/exosuite-redis.template.yaml
+++ b/templates/exosuite-redis.template.yaml
@@ -54,6 +54,14 @@ metadata:
   labels:
     type: local
 spec:
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - mail.exosuite.fr
   capacity:
     storage: <STORAGE>
   accessModes:
