--- a/ftp/staging/vsftpd.yaml
+++ b/ftp/staging/vsftpd.yaml
@@ -35,15 +35,18 @@ spec:
           image: fauria/vsftpd
           ports:
             - containerPort: 20
-              name: vsftpd-data
+              name: ftp-data
             - containerPort: 21
-              name: vsftpd-control
+              name: ftp-server
           env:
             - name: FTP_USER
               value: "exosuite"
             - name: FTP_PASS
               value: "aUxDF94ALY2YWrTpxhc5gs8"
             - name: PASV_ENABLE
-              value: "NO"
+              value: NO
+            - name: LOG_STDOUT
+              value: "log"
+
       nodeSelector:
         type: staging
