--- a/ftp/staging/vsftpd.yaml
+++ b/ftp/staging/vsftpd.yaml
@@ -44,7 +44,7 @@ spec:
             - name: FTP_PASS
               value: "aUxDF94ALY2YWrTpxhc5gs8"
             - name: PASV_ENABLE
-              value: NO
+              value: "NO"
             - name: LOG_STDOUT
               value: "log"
 
