--- a/ftp/staging/vsftpd.yaml
+++ b/ftp/staging/vsftpd.yaml
@@ -9,8 +9,10 @@ spec:
       image: fauria/vsftpd
       ports:
         - containerPort: 20
+          hostPort: 20
           name: ftp-data
         - containerPort: 21
+          hostPort: 21
           name: ftp-server
       env:
         - name: FTP_USER
