--- a/admin/admin-role.yaml
+++ b/admin/admin-role.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: dev.exosuite.fr
+  name: teamexosuite.cloud
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
   - kind: ServiceAccount
-    name: dev.exosuite.fr
+    name: teamexosuite.cloud
     namespace: kube-system
