--- a/ftp/staging/vsftpd.yaml
+++ b/ftp/staging/vsftpd.yaml
@@ -1,21 +1,44 @@
 apiVersion: v1
-kind: Pod
+kind: Service
+metadata:
+  namespace: staging
+  name: exosuite-vsftpd
+  labels:
+    app: exosuite-vsftpd
+spec:
+  type: ClusterIP
+  ports:
+    - port: 21
+      name: vsftpd-control
+  selector:
+    app: exosuite-vsftpd
+---
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   namespace: staging
   name: exosuite-vsftpd
 spec:
-  containers:
-    - name: exosuite-vsftpd
-      image: fauria/vsftpd
-      ports:
-      	- containerPort: 21
-          protocol: TCP
-          name: "ftp-server"
-      env:
-        - name: FTP_USER
-          value: "exosuite"
-        - name: FTP_PASS
-          value: "aUxDF94ALY2YWrTpxhc5gs8"
-  nodeSelector:
-    type: staging
-
+  replicas: 1
+  selector:
+    matchLabels:
+      app: exosuite-vsftpd
+  template:
+    metadata:
+      labels:
+        app: exosuite-vsftpd
+    spec:
+      containers:
+        - name: exosuite-vsftpd
+          image: fauria/vsftpd
+          ports:
+            - containerPort: 21
+              protocol: TCP
+              name: "ftp-server"
+          env:
+            - name: FTP_USER
+              value: "exosuite"
+            - name: FTP_PASS
+              value: "aUxDF94ALY2YWrTpxhc5gs8"
+      nodeSelector:
+        type: staging
