--- a/templates/exosuite-nginx.template.yaml
+++ b/templates/exosuite-nginx.template.yaml
@@ -52,6 +52,11 @@ spec:
               path: /monitoring/alive
               port: 443
             initialDelaySeconds: 1
+          resources:
+            requests:
+              - cpu: "200m"
+            limits:
+              - cpu: "500m"
 
       imagePullSecrets:
         - name: <REGISTRY_SECRET>
