--- a/templates/exosuite-php-fpm.template.yaml
+++ b/templates/exosuite-php-fpm.template.yaml
@@ -39,6 +39,11 @@ spec:
           image: <REGISTRY>/<CONTAINER>:<VERSION>
           ports:
             - containerPort: 9000
+          resources:
+            requests:
+              - cpu: "200m"
+            limits:
+              - cpu: "500m"
           readinessProbe:
             exec:
               command:
