--- a/templates/exosuite-artisan.template.yaml
+++ b/templates/exosuite-artisan.template.yaml
@@ -23,9 +23,9 @@ spec:
           image: <REGISTRY>/<CONTAINER>:<VERSION>
           resources:
             requests:
-              - cpu: "200m"
+              cpu: "200m"
             limits:
-              - cpu: "500m"
+              cpu: "500m"
           lifecycle:
             postStart:
               exec:
