--- a/laravel-echo-server/staging/exosuite-laravel-echo-server.yaml
+++ b/laravel-echo-server/staging/exosuite-laravel-echo-server.yaml
@@ -36,7 +36,9 @@ spec:
           resources:
             requests:
               cpu: "200m"
+              memory: "100Mi"
             limits:
               cpu: "500m"
+              memory: "200Mi"
       imagePullSecrets:
         - name: staging-registry
