--- a/templates/exosuite-artisan.template.yaml
+++ b/templates/exosuite-artisan.template.yaml
@@ -24,8 +24,10 @@ spec:
           resources:
             requests:
               cpu: "200m"
+              memory: "100Mi"
             limits:
               cpu: "500m"
+              memory: "200Mi"
           lifecycle:
             postStart:
               exec:
