--- a/templates/exosuite-php-fpm.template.yaml
+++ b/templates/exosuite-php-fpm.template.yaml
@@ -42,8 +42,10 @@ spec:
           resources:
             requests:
               cpu: "200m"
+              memory: "100Mi"
             limits:
               cpu: "500m"
+              memory: "200Mi"
           readinessProbe:
             exec:
               command:
